Second Commit- pushing to Github

--- a/index.html
+++ b/index.html
@@ -6,34 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section class="section">
         <div class="container">
-            <h1 class="title">
-                FIND THE CONTENT THAT PERFORMS BEST!
-            </h1>
-            <p class="subtitle">
-                Use Youtube insights to generate <strong>Big Ideas</strong>!
-            </p>
-            <div class="columns is-centered is-vcentered">
+            <div class="columns is-multiline is-mobile is-centered is-vcentered">
+                <div class="column is-one-quarter">
+                </div>
                 <div class="column is-half">
-                    <p class="bd-notification is-primary">
-                    <div class="field has-addons">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Enter some keywords">
-                        </div>
-                        <div class="control">
-                            <a class="button is-info">
-                                Find Big Ideas
-                            </a>
-                        </div>
+                    <h1 class="title">
+                        FIND THE CONTENT THAT PERFORMS BEST!
+                    </h1>
+                </div>
+                <div class="column is-one-quarter">
+                </div>
+                <div class="column is-one-quarter">
+                </div>
+
+            </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns is-multiline is-mobile is-centered is-vcentered">
+                <p class="subtitle">
+                    Use Youtube insights to generate <strong>Big Ideas</strong>!
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns is-multiline is-mobile is-centered is-vcentered">
+                <div class="field has-addons">
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Enter some keywords">
                     </div>
-                    </p>
+                    <div class="control">
+                        <a class="button is-info">
+                            Find Big Ideas
+                        </a>
+                    </div>
                 </div>
             </div>
-
         </div>
     </section>
 </body>
